# my_max_objects

./: CMakeLists.txt  README.md
source/calcmod/: CMakeLists.txt  README.md  calcmod.c
source/jweb_processor/: CMakeLists.txt  jweb_processor.c  jweb_processor.maxhelp
source/temperaments/: CMakeLists.txt  temperaments.c  temperaments.maxhelp
src/calcmod/: CMakeLists.txt  calcmod.c
src/jweb_processor/: CMakeLists.txt  README.md  jweb_processor.c
